# openapi/openapi.yaml
@@ -74,7 +74,8 @@ paths:
   /users:
     get:
       summary: Get all users
-      tags: users
+      tags: 
+        - users
       responses:
         '200':
           description: a List of users
@@ -84,6 +85,64 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: new user data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: create y/n?
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/Ans'
+    patch:
+      summary: Change users data 
+      tags:
+        - users
+      requestBody:
+        description: data to change
+        required: true 
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: changed y/n?
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Ans'
+    delete:
+      summary: Delete user by id
+      tags:
+        - users
+      requestBody:
+        dscription: data to change
+        reqired: true
+        content: 
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: changed y/n?
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Ans'
+              
+                  
+              
+        
               
 
       
@@ -106,5 +165,13 @@ components:
           format: uint # так как в БД айди это только положительные числа.
         email: 
           type: string
-        password: 
-          type: string   
+        password:
+          type: string
+    Ans:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        Changed:
+          type: boolean
